--- a/SemesterProject/app/src/main/res/values/strings.xml
+++ b/SemesterProject/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">SemesterProject</string>
     <string name="title_activity_math_content">ScrollingActivity</string>
-    <string name="large_text">
+    <string name="large_textRatio">
         "<b>Ratio</b>\n\n"
 
         "In mathematics, a ratio indicates how many times one number contains another. For example, if there are eight oranges and six lemons in a bowl of fruit, then the ratio of oranges to lemons is eight to six (that is, 8∶6, which is equivalent to the ratio 4∶3). Similarly, the ratio of lemons to oranges is 6∶8 (or 3∶4) and the ratio of oranges to the total amount of fruit is 8∶14 (or 4∶7).\n"
@@ -20,16 +20,16 @@
         "A statement expressing the equality of two ratios A∶B and C∶D is called a proportion, written as A∶B = C∶D or A∶B:C∶D. This latter form, when spoken or written in the English language, is often expressed as\n "
         "(A is to B) as (C is to D). "
         "A, B, C and D are called the terms of the proportion. A and D are called its extremes, and B and C are called its means. The equality of three or more ratios, like A∶B = C∶D = E∶F, is called a <b>continued proportion.</b>\n "
-        "Ratios are sometimes used with three or even more terms, e.g., the proportion for the edge lengths of a <i>two by four</i> that is ten inches long is therefore\n"
+        "Ratios are sometimes used with three or even more terms, e.g., the proportion for the edge lengths of a <b>Examples</b> that is ten inches long is therefore\n"
         "thickness : width : length =2:4:10\n"
         "The meaning of such a proportion of ratios with more than two terms is that the ratio of any two terms on the left-hand side is equal to the ratio of the corresponding two terms on the right-hand side. "
-        "<b>Examples</b>\n\n"
+        "<b>Big Foot Example</b>\n\n"
         "A Recipe for pancakes uses 3 cups of flour and 2 cups of milk.\n"
         "So the ratio of flour to milk is 3 : 2\n"
         "To make pancakes for a LOT of people we might need 4 times the quantity, so we multiply the numbers by 4:\n"
         "3×4 : 2×4 = 12 : 8\n"
         "In other words, 12 cups of flour and 8 cups of milk.\n"
-        "<b>Big Foot Example</b>"
+        "<i>two by four</i>"
         "Allie measured her foot and it was 21cm long, and then she measured her Mother\'s foot, and it was 24cm long.\n "
         "But then she thought to measure heights, and found she is 133cm tall, and her Mom is 152cm tall.\n"
 
@@ -43,6 +43,101 @@
 
 
     </string>
+    <string name="large_textRate">
+        "A ratio is a comparison of two numbers or measurements. The numbers or measurements being compared are called the terms of the ratio."
+
+    </string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_ratio_content_page">ScrollingActivity</string>
+    <string name="title_activity_math_rates_content">ScrollingActivity</string>
+    <string name="title_activity_scrolling_rates">ScrollingActivity</string>
+    <string name="large_text">
+        "Material is the metaphor.\n\n"
+
+        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
+        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
+        "technologically advanced and open to imagination and magic.\n"
+        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
+        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
+        "flexibility of the material creates new affordances that supercede those in the physical "
+        "world, without breaking the rules of physics.\n"
+        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
+        "interact, and exist in space and in relation to each other. Realistic lighting shows "
+        "seams, divides space, and indicates moving parts.\n\n"
+
+        "Bold, graphic, intentional.\n\n"
+
+        "The foundational elements of print based design typography, grids, space, scale, color, "
+        "and use of imagery guide visual treatments. These elements do far more than please the "
+        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
+        "imagery, large scale typography, and intentional white space create a bold and graphic "
+        "interface that immerse the user in the experience.\n"
+        "An emphasis on user actions makes core functionality immediately apparent and provides "
+        "waypoints for the user.\n\n"
+
+        "Motion provides meaning.\n\n"
+
+        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
+        "inflection points that initiate motion, transforming the whole design.\n"
+        "All action takes place in a single environment. Objects are presented to the user without "
+        "breaking the continuity of experience even as they transform and reorganize.\n"
+        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
+        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"
+
+        "3D world.\n\n"
+
+        "The material environment is a 3D space, which means all objects have x, y, and z "
+        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
+        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
+        "position along the z-axis and has a standard 1dp thickness.\n"
+        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
+        "emulated by manipulating the y-axis.\n\n"
+
+        "Light and shadow.\n\n"
+
+        "Within the material environment, virtual lights illuminate the scene. Key lights create "
+        "directional shadows, while ambient light creates soft shadows from all angles.\n"
+        "Shadows in the material environment are cast by these two light sources. In Android "
+        "development, shadows occur when light sources are blocked by sheets of material at "
+        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
+        "y-axis only. The following example shows the card with a height of 6dp.\n\n"
+
+        "Resting elevation.\n\n"
+
+        "All material objects, regardless of size, have a resting elevation, or default elevation "
+        "that does not change. If an object changes elevation, it should return to its resting "
+        "elevation as soon as possible.\n\n"
+
+        "Component elevations.\n\n"
+
+        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
+        "does not vary from 6dp in one app to 16dp in another app).\n"
+        "Components may have different resting elevations across platforms, depending on the depth "
+        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"
+
+        "Responsive elevation and dynamic elevation offsets.\n\n"
+
+        "Some component types have responsive elevation, meaning they change elevation in response "
+        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
+        "changes are consistently implemented using dynamic elevation offsets.\n"
+        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
+        "to the component’s resting state. They ensure that elevation changes are consistent "
+        "across actions and component types. For example, all components that lift on press have "
+        "the same elevation change relative to their resting elevation.\n"
+        "Once the input event is completed or cancelled, the component will return to its resting "
+        "elevation.\n\n"
+
+        "Avoiding elevation interference.\n\n"
+
+        "Components with responsive elevations may encounter other components as they move between "
+        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
+        "through other material, components avoid interfering with one another any number of ways, "
+        "whether on a per component basis or using the entire app layout.\n"
+        "On a component level, components can move or be removed before they cause interference. "
+        "For example, a floating action button (FAB) can disappear or move off screen before a "
+        "user picks up a card, or it can move if a snackbar appears.\n"
+        "On the layout level, design your app layout to minimize opportunities for interference. "
+        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
+        "when a user tries to pick up one of cards.\n\n"
+    </string>
 </resources>
