--- a/SemesterProject/app/src/main/res/values/strings.xml
+++ b/SemesterProject/app/src/main/res/values/strings.xml
@@ -20,16 +20,16 @@
         "A statement expressing the equality of two ratios A∶B and C∶D is called a proportion, written as A∶B = C∶D or A∶B:C∶D. This latter form, when spoken or written in the English language, is often expressed as\n "
         "(A is to B) as (C is to D). "
         "A, B, C and D are called the terms of the proportion. A and D are called its extremes, and B and C are called its means. The equality of three or more ratios, like A∶B = C∶D = E∶F, is called a <b>continued proportion.</b>\n "
-        "Ratios are sometimes used with three or even more terms, e.g., the proportion for the edge lengths of a <i>two by four</i> that is ten inches long is therefore\n"
+        "Ratios are sometimes used with three or even more terms, e.g., the proportion for the edge lengths of a <b>Examples</b> that is ten inches long is therefore\n"
         "thickness : width : length =2:4:10\n"
         "The meaning of such a proportion of ratios with more than two terms is that the ratio of any two terms on the left-hand side is equal to the ratio of the corresponding two terms on the right-hand side. "
-        "<b>Examples</b>\n\n"
+        "<b>Big Foot Example</b>\n\n"
         "A Recipe for pancakes uses 3 cups of flour and 2 cups of milk.\n"
         "So the ratio of flour to milk is 3 : 2\n"
         "To make pancakes for a LOT of people we might need 4 times the quantity, so we multiply the numbers by 4:\n"
         "3×4 : 2×4 = 12 : 8\n"
         "In other words, 12 cups of flour and 8 cups of milk.\n"
-        "<b>Big Foot Example</b>"
+        "<i>two by four</i>"
         "Allie measured her foot and it was 21cm long, and then she measured her Mother\'s foot, and it was 24cm long.\n "
         "But then she thought to measure heights, and found she is 133cm tall, and her Mom is 152cm tall.\n"
 
